force-app/main/default/objects/eWallet__c/eWallet__c.object-meta.xml
<CustomObject>
    <label>eWallet</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>eWallet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eWallets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>