force-app/main/default/objects/eWallet__c/fields/Amicorp_E_wallet__c.field-meta.xml
<CustomField>
    <fullName>Amicorp_E_wallet__c</fullName>
    <label>Amicorp E-wallet</label>
    <length>25</length>
    <type>Text</type>
</CustomField>