force-app/main/default/objects/eWallet__c/fields/Available_Balance_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Available_Balance_USD_Equiv__c</fullName>
    <formula>Available_Balance__c  * USD_Equiv_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Balance USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>