force-app/main/default/objects/eWallet__c/fields/Balance_Amount_Check__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount_Check__c</fullName>
    <inlineHelpText>Field to check the balance calculate by a flow rather than roller helper , to check if there is an error</inlineHelpText>
    <label>Balance Amount Check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>