force-app/main/default/objects/eWallet__c/fields/Balance_check__c.field-meta.xml
<CustomField>
    <fullName>Balance_check__c</fullName>
    <formula>Balance__c !=  Balance_Amount_Check__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance check error</label>
    <type>Checkbox</type>
</CustomField>