force-app/main/default/objects/eWallet__c/fields/Balance_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Balance_Rollup__c</fullName>
    <description>Technical field, SUM eWallet trustee Balance
Existing Balance eWallet too risky to be replace by Rollup</description>
    <label>Balance Rollup</label>
    <summarizedField>eWallet_Trustee__c.Balance__c</summarizedField>
    <summaryForeignKey>eWallet_Trustee__c.Main_eWallet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>