force-app/main/default/objects/eWallet__c/fields/Balance_temp_check__c.field-meta.xml
<CustomField>
    <fullName>Balance_temp_check__c</fullName>
    <label>Balance temp check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>