force-app/main/default/objects/eWallet__c/fields/balance_test__c.field-meta.xml
<CustomField>
    <fullName>balance_test__c</fullName>
    <label>balance test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>