force-app/main/default/objects/eWallet__c/fields/Balance_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Balance_USD_Equiv__c</fullName>
    <formula>Balance__c  *  USD_Equiv_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>