force-app/main/default/objects/eWallet__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <label>Bank Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.CCY__c</field>
            <operation>equals</operation>
            <valueField>Bank_Account__c.Currency__c</valueField>
        </filterItems>
        <filterItems>
            <field>Bank_Account__c.Name</field>
            <operation>contains</operation>
            <value>Platform</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>eWallets</relationshipLabel>
    <relationshipName>eWallets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>