force-app/main/default/objects/eWallet__c/fields/Camelot_e_wallet__c.field-meta.xml
<CustomField>
    <fullName>Camelot_e_wallet__c</fullName>
    <label>Camelot e-wallet</label>
    <length>25</length>
    <type>Text</type>
</CustomField>