force-app/main/default/objects/eWallet__c/fields/Deposits_Not_Processed__c.field-meta.xml
<CustomField>
    <fullName>Deposits_Not_Processed__c</fullName>
    <label>Deposits Not Processed</label>
    <summarizedField>Withdrawal_Deposit__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Withdrawal_Deposit__c.Status__c</field>
        <operation>equals</operation>
        <value>Not Processed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Withdrawal_Deposit__c.Type__c</field>
        <operation>equals</operation>
        <value>70.Deposit</value>
    </summaryFilterItems>
    <summaryForeignKey>Withdrawal_Deposit__c.eWallet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>