force-app/main/default/objects/eWallet__c/fields/E_wallet_TXT__c.field-meta.xml
<CustomField>
    <fullName>E_wallet_TXT__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-wallet TXT</label>
    <type>Text</type>
</CustomField>