force-app/main/default/objects/eWallet__c/fields/Enforce_positive_balance__c.field-meta.xml
<CustomField>
    <fullName>Enforce_positive_balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce positive balance</label>
    <type>Checkbox</type>
</CustomField>