force-app/main/default/objects/eWallet__c/fields/In_Progress__c.field-meta.xml
<CustomField>
    <fullName>In_Progress__c</fullName>
    <label>In Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>