force-app/main/default/objects/eWallet__c/fields/In_Progress_Rollup__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Rollup__c</fullName>
    <description>Technical field, SUM eWallet trustee In Progress amount
Existing In progress eWallet too risky to be replace by Rollup</description>
    <label>In Progress Rollup</label>
    <summarizedField>eWallet_Trustee__c.In_Progress__c</summarizedField>
    <summaryForeignKey>eWallet_Trustee__c.Main_eWallet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>