force-app/main/default/objects/eWallet__c/fields/In_Progress_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_USD_Equiv__c</fullName>
    <formula>In_Progress__c * USD_Equiv_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>