force-app/main/default/objects/eWallet__c/fields/Marketplace_for_FX__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_for_FX__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Marketplace for FX</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.CCY__c</field>
            <operation>equals</operation>
            <valueField>Marketplace__c.Currency__c</valueField>
        </filterItems>
        <filterItems>
            <field>Marketplace__c.default_marketplace__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marketplace__c</referenceTo>
    <relationshipLabel>eWallets</relationshipLabel>
    <relationshipName>eWallets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>