force-app/main/default/objects/eWallet__c/fields/Number_of_e_wallet_trustee__c.field-meta.xml
<CustomField>
    <fullName>Number_of_e_wallet_trustee__c</fullName>
    <inlineHelpText>to count the number of e-wallet trustee</inlineHelpText>
    <label>Number of e-wallet trustee</label>
    <summaryForeignKey>eWallet_Trustee__c.Main_eWallet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>