force-app/main/default/objects/eWallet__c/fields/Repaid__c.field-meta.xml
<CustomField>
    <fullName>Repaid__c</fullName>
    <label>Repaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>