force-app/main/default/objects/eWallet__c/fields/Repayment_of_the_day__c.field-meta.xml
<CustomField>
    <fullName>Repayment_of_the_day__c</fullName>
    <description>Repayment of the day</description>
    <inlineHelpText>Repayment of the day</inlineHelpText>
    <label>Repayment of the day</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>