force-app/main/default/objects/eWallet__c/fields/Reservation_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Rollup__c</fullName>
    <description>Technical field, SUM eWallet trustee Reservation amount
Existing Reservation eWallet too risky to be replace by Rollup</description>
    <label>Reservation Rollup</label>
    <summarizedField>eWallet_Trustee__c.Reservations__c</summarizedField>
    <summaryForeignKey>eWallet_Trustee__c.Main_eWallet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>