force-app/main/default/objects/eWallet__c/fields/Reservations__c.field-meta.xml
<CustomField>
    <fullName>Reservations__c</fullName>
    <label>Reservations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>