force-app/main/default/objects/eWallet__c/fields/Reservations_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Reservations_USD_Equiv__c</fullName>
    <formula>Reservations__c * USD_Equiv_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reservations USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>