force-app/main/default/objects/eWallet__c/fields/Total_Discount_Earned__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Earned__c</fullName>
    <label>Total Discount Earned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>