force-app/main/default/objects/eWallet__c/fields/Total_Discount_Earned_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Earned_Rollup__c</fullName>
    <description>Technical field, SUM eWallet trustee Total Discount Earned
Existing Total Discount Earned eWallet too risky to be replaced by Rollup</description>
    <label>Total Discount Earned Rollup</label>
    <summarizedField>eWallet_Trustee__c.Total_Discount_Earned__c</summarizedField>
    <summaryForeignKey>eWallet_Trustee__c.Main_eWallet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>