force-app/main/default/objects/eWallet__c/fields/Total_Position__c.field-meta.xml
<CustomField>
    <fullName>Total_Position__c</fullName>
    <formula>Balance__c + ( In_Progress__c  *-1) - Withdrawals_Not_Processed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>