force-app/main/default/objects/eWallet__c/fields/Total_Position_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Total_Position_USD_Equiv__c</fullName>
    <formula>Total_Position__c  *  USD_Equiv_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Position USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>