force-app/main/default/objects/eWallet__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <externalId>true</externalId>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>