force-app/main/default/objects/eWallet__c/fields/USD_Equiv_Rate__c.field-meta.xml
<CustomField>
    <fullName>USD_Equiv_Rate__c</fullName>
    <formula>Marketplace_for_FX__r.latest_to_usd_rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USD Equiv Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>