force-app/main/default/objects/eWallet__c/fields/Withdrawals_Not_Processed_Val__c.field-meta.xml
<CustomField>
    <fullName>Withdrawals_Not_Processed_Val__c</fullName>
    <label>Withdrawals Not Processed Val</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>