force-app/main/default/objects/eWallet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Balance__c</columns>
    <columns>CCY__c</columns>
    <columns>NAME</columns>
    <columns>Balance_Amount_Check__c</columns>
    <columns>Available_Balance_USD_Equiv__c</columns>
    <columns>Total_Position_USD_Equiv__c</columns>
    <columns>Marketplace_for_FX__c</columns>
    <columns>Sensitive_Record__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>