force-app/main/default/objects/eWallet__c/listViews/Balance_check_error.listView-meta.xml
<ListView>
    <fullName>Balance_check_error</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Balance__c</columns>
    <columns>Balance_Amount_Check__c</columns>
    <columns>Amicorp_E_wallet__c</columns>
    <columns>Available_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>Balance check error</label>
</ListView>