force-app/main/default/objects/eWallet__c/listViews/Incomlend_ewallet_test.listView-meta.xml
<ListView>
    <fullName>Incomlend_ewallet_test</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Balance__c</columns>
    <columns>Balance_Amount_Check__c</columns>
    <columns>CCY__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>incomlend</value>
    </filters>
    <label>Incomlend e-wallets test</label>
</ListView>